--- a/bareminimumplotter.ui
+++ b/bareminimumplotter.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>500</width>
-    <height>650</height>
+    <width>777</width>
+    <height>711</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -15,29 +15,6 @@
   </property>
   <widget class="QWidget" name="centralWidget">
    <layout class="QGridLayout" name="gridLayout">
-    <item row="1" column="0">
-     <widget class="QPushButton" name="buttonPlot">
-      <property name="text">
-       <string>Plot</string>
-      </property>
-     </widget>
-    </item>
-    <item row="10" column="0">
-     <layout class="QHBoxLayout" name="horizontalLayout_2">
-      <item>
-       <widget class="QLineEdit" name="lineEditName1"/>
-      </item>
-      <item>
-       <widget class="QLineEdit" name="lineEditMin1"/>
-      </item>
-      <item>
-       <widget class="QLineEdit" name="lineEditMax1"/>
-      </item>
-      <item>
-       <widget class="QLineEdit" name="lineEditElement1"/>
-      </item>
-     </layout>
-    </item>
     <item row="0" column="0">
      <widget class="QCustomPlot" name="plotter" native="true">
       <property name="sizePolicy">
@@ -156,32 +133,10 @@
       </item>
      </layout>
     </item>
-    <item row="11" column="0">
-     <layout class="QHBoxLayout" name="horizontalLayout_3">
-      <property name="bottomMargin">
-       <number>0</number>
-      </property>
-      <item>
-       <widget class="QLineEdit" name="lineEditName2"/>
-      </item>
-      <item>
-       <widget class="QLineEdit" name="lineEditMin2"/>
-      </item>
-      <item>
-       <widget class="QLineEdit" name="lineEditMax2"/>
-      </item>
-      <item>
-       <widget class="QLineEdit" name="lineEditElement2"/>
-      </item>
-     </layout>
-    </item>
-    <item row="3" column="0">
-     <widget class="QLabel" name="label_Inequalities">
-      <property name="text">
-       <string>Inequalities</string>
-      </property>
-      <property name="alignment">
-       <set>Qt::AlignCenter</set>
+    <item row="2" column="0">
+     <widget class="Line" name="line_2">
+      <property name="orientation">
+       <enum>Qt::Horizontal</enum>
       </property>
      </widget>
     </item>
@@ -195,6 +150,23 @@
       </property>
       <property name="alignment">
        <set>Qt::AlignCenter</set>
+      </property>
+     </widget>
+    </item>
+    <item row="3" column="0">
+     <widget class="QLabel" name="label_Inequalities">
+      <property name="text">
+       <string>Inequalities</string>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignCenter</set>
+      </property>
+     </widget>
+    </item>
+    <item row="5" column="0">
+     <widget class="Line" name="line">
+      <property name="orientation">
+       <enum>Qt::Horizontal</enum>
       </property>
      </widget>
     </item>
@@ -243,19 +215,115 @@
         </property>
        </widget>
       </item>
+      <item>
+       <widget class="QLabel" name="label">
+        <property name="text">
+         <string>Units</string>
+        </property>
+        <property name="alignment">
+         <set>Qt::AlignCenter</set>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QLabel" name="label_2">
+        <property name="minimumSize">
+         <size>
+          <width>70</width>
+          <height>0</height>
+         </size>
+        </property>
+        <property name="text">
+         <string>Plot Mode</string>
+        </property>
+        <property name="alignment">
+         <set>Qt::AlignCenter</set>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QLabel" name="label_3">
+        <property name="minimumSize">
+         <size>
+          <width>200</width>
+          <height>0</height>
+         </size>
+        </property>
+        <property name="text">
+         <string>Point Chooser</string>
+        </property>
+        <property name="alignment">
+         <set>Qt::AlignCenter</set>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QLabel" name="label_4">
+        <property name="minimumSize">
+         <size>
+          <width>80</width>
+          <height>0</height>
+         </size>
+        </property>
+        <property name="text">
+         <string>Chosen Point</string>
+        </property>
+        <property name="alignment">
+         <set>Qt::AlignCenter</set>
+        </property>
+       </widget>
+      </item>
      </layout>
     </item>
-    <item row="5" column="0">
-     <widget class="Line" name="line">
-      <property name="orientation">
-       <enum>Qt::Horizontal</enum>
+    <item row="1" column="0">
+     <widget class="QPushButton" name="buttonPlot">
+      <property name="text">
+       <string>Plot</string>
       </property>
      </widget>
     </item>
-    <item row="2" column="0">
-     <widget class="Line" name="line_2">
-      <property name="orientation">
-       <enum>Qt::Horizontal</enum>
+    <item row="11" column="0">
+     <layout class="QHBoxLayout" name="horizontalLayout_2">
+      <item>
+       <widget class="QLineEdit" name="lineEditName1"/>
+      </item>
+      <item>
+       <widget class="QLineEdit" name="lineEditMin1"/>
+      </item>
+      <item>
+       <widget class="QLineEdit" name="lineEditMax1"/>
+      </item>
+      <item>
+       <widget class="QLineEdit" name="lineEditElement1"/>
+      </item>
+     </layout>
+    </item>
+    <item row="12" column="0">
+     <layout class="QHBoxLayout" name="horizontalLayout_3">
+      <property name="bottomMargin">
+       <number>0</number>
+      </property>
+      <item>
+       <widget class="QLineEdit" name="lineEditName2"/>
+      </item>
+      <item>
+       <widget class="QLineEdit" name="lineEditMin2"/>
+      </item>
+      <item>
+       <widget class="QLineEdit" name="lineEditMax2"/>
+      </item>
+      <item>
+       <widget class="QLineEdit" name="lineEditElement2"/>
+      </item>
+     </layout>
+    </item>
+    <item row="10" column="0">
+     <widget class="VariableInput" name="widget" native="true">
+      <property name="minimumSize">
+       <size>
+        <width>0</width>
+        <height>0</height>
+       </size>
       </property>
      </widget>
     </item>
@@ -268,6 +336,12 @@
    <class>QCustomPlot</class>
    <extends>QWidget</extends>
    <header>qcustomplot.h</header>
+   <container>1</container>
+  </customwidget>
+  <customwidget>
+   <class>VariableInput</class>
+   <extends>QWidget</extends>
+   <header>variable_input/variableinput.h</header>
    <container>1</container>
   </customwidget>
  </customwidgets>
