--- a/bareminimumplotter.ui
+++ b/bareminimumplotter.ui
@@ -20,10 +20,16 @@
       <property name="sizePolicy">
        <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
         <horstretch>0</horstretch>
-        <verstretch>0</verstretch>
+        <verstretch>1</verstretch>
        </sizepolicy>
       </property>
       <property name="minimumSize">
+       <size>
+        <width>0</width>
+        <height>200</height>
+       </size>
+      </property>
+      <property name="baseSize">
        <size>
         <width>0</width>
         <height>450</height>
