--- a/inequality_input/inequalityinput.ui
+++ b/inequality_input/inequalityinput.ui
@@ -22,6 +22,9 @@
    </property>
    <item>
     <widget class="QLineEdit" name="lineEditLeft">
+     <property name="toolTip">
+      <string extracomment="Left-hand-side expression.">Left-hand-side expression</string>
+     </property>
      <property name="text">
       <string/>
      </property>
@@ -29,6 +32,9 @@
    </item>
    <item>
     <widget class="QComboBox" name="comboBoxInequality">
+     <property name="toolTip">
+      <string extracomment="Inequality symbol.">Inequality symbol</string>
+     </property>
      <item>
       <property name="text">
        <string>&lt;</string>
@@ -52,10 +58,17 @@
     </widget>
    </item>
    <item>
-    <widget class="QLineEdit" name="lineEditRight"/>
+    <widget class="QLineEdit" name="lineEditRight">
+     <property name="toolTip">
+      <string extracomment="Right-hand-side expression.">Right-hand-side expression</string>
+     </property>
+    </widget>
    </item>
    <item>
     <widget class="QComboBox" name="comboBoxShape">
+     <property name="toolTip">
+      <string extracomment="Marker shape.">Marker shape</string>
+     </property>
      <item>
       <property name="text">
        <string>star</string>
@@ -80,6 +93,9 @@
    </item>
    <item>
     <widget class="QComboBox" name="comboBoxColor">
+     <property name="toolTip">
+      <string extracomment="Marker colour.">Marker colour</string>
+     </property>
      <item>
       <property name="text">
        <string>blue</string>
@@ -147,6 +163,9 @@
        <pointsize>10</pointsize>
       </font>
      </property>
+     <property name="toolTip">
+      <string extracomment="Move up.">Move up</string>
+     </property>
      <property name="text">
       <string>⋀</string>
      </property>
@@ -171,6 +190,9 @@
        <pointsize>10</pointsize>
       </font>
      </property>
+     <property name="toolTip">
+      <string extracomment="Move down.">Move down</string>
+     </property>
      <property name="text">
       <string>⋁</string>
      </property>
@@ -183,6 +205,9 @@
        <width>80</width>
        <height>0</height>
       </size>
+     </property>
+     <property name="toolTip">
+      <string extracomment="Choose combination mode.">Choose combination mode</string>
      </property>
      <item>
       <property name="text">
@@ -220,8 +245,24 @@
        <height>0</height>
       </size>
      </property>
+     <property name="toolTip">
+      <string extracomment="Remove">Remove</string>
+     </property>
      <property name="text">
       <string>-</string>
+     </property>
+    </widget>
+   </item>
+   <item>
+    <widget class="QCheckBox" name="checkBoxSkip">
+     <property name="toolTip">
+      <string extracomment="Disable">Disable</string>
+     </property>
+     <property name="toolTipDuration">
+      <number>-1</number>
+     </property>
+     <property name="text">
+      <string/>
      </property>
     </widget>
    </item>
