--- a/inequality_input/inequalityinput.ui
+++ b/inequality_input/inequalityinput.ui
@@ -10,6 +10,12 @@
     <height>45</height>
    </rect>
   </property>
+  <property name="minimumSize">
+   <size>
+    <width>0</width>
+    <height>30</height>
+   </size>
+  </property>
   <property name="windowTitle">
    <string>InequalityInput</string>
   </property>
@@ -20,6 +26,13 @@
    <property name="bottomMargin">
     <number>0</number>
    </property>
+   <item>
+    <widget class="QLabel" name="label_Index">
+     <property name="text">
+      <string>-</string>
+     </property>
+    </widget>
+   </item>
    <item>
     <widget class="QLineEdit" name="lineEditLeft">
      <property name="toolTip">
